--- a/.config
+++ b/.config
@@ -16,6 +16,8 @@ CONFIG_FEED_kenzok8=y
 
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_wget=y
 
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
