--- a/.config
+++ b/.config
@@ -89,8 +89,7 @@ CONFIG_PACKAGE_webui-aria2=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_gzip=y
+CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_gdisk=y
 CONFIG_PACKAGE_lsblk=y
