--- a/.config
+++ b/.config
@@ -3,7 +3,7 @@ CONFIG_TARGET_sunxi_cortexa7=y
 CONFIG_TARGET_sunxi_cortexa7_DEVICE_xunlong_orangepi-zero=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_SUNXI_SD_BOOT_PARTSIZE=30
-CONFIG_TARGET_ROOTFS_PARTSIZE=250
+CONFIG_TARGET_ROOTFS_PARTSIZE=320
 
 CONFIG_PER_FEED_REPO=y
 CONFIG_FEED_packages=y
@@ -34,9 +34,7 @@ CONFIG_PACKAGE_kmod-rtl8821cu=y
 
 CONFIG_PACKAGE_luci=y
 CONFIG_LUCI_LANG_zh-cn=y  
-CONFIG_PACKAGE_luci-theme-netgear=y
 CONFIG_PACKAGE_luci-theme-argon_new=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
@@ -47,7 +45,6 @@ CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 
@@ -80,15 +77,11 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
-CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-zerotier=y
 
-CONFIG_PACKAGE_webui-aria2=y
-CONFIG_PACKAGE_aria2=y
+# CONFIG_PACKAGE_webui-aria2=y
+# CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_cfdisk=y
-CONFIG_PACKAGE_gdisk=y
 CONFIG_PACKAGE_lsblk=y
