--- a/.config
+++ b/.config
@@ -56,6 +56,8 @@ CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
 
+CONFIG_PACKAGE_webui-aria2=y
+CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_lsblk=y
