--- a/.config
+++ b/.config
@@ -10,6 +10,7 @@ CONFIG_FEED_packages=y
 CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
+CONFIG_FEED_passwall=y
 CONFIG_FEED_small=y
 CONFIG_FEED_kenzok8=y
 
