--- a/.config
+++ b/.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_sunxi=y
 CONFIG_TARGET_sunxi_cortexa7=y
 CONFIG_TARGET_sunxi_cortexa7_DEVICE_xunlong_orangepi-zero=y
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_SUNXI_SD_BOOT_PARTSIZE=16
 CONFIG_TARGET_ROOTFS_PARTSIZE=320
