--- a/.config
+++ b/.config
@@ -32,9 +32,10 @@ CONFIG_PACKAGE_kmod-rtl8821cu=y
 
 CONFIG_PACKAGE_luci=y
 CONFIG_LUCI_LANG_zh-cn=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 
-CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -53,8 +54,10 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
+# CONFIG_PACKAGE_luci-app-wol is not set
+# CONFIG_PACKAGE_luci-app-vlmcsd is not set
+# CONFIG_PACKAGE_luci-app-unblockmusic is not set
 
 CONFIG_PACKAGE_aria2=y
-CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_lsblk=y
