--- a/.config
+++ b/.config
@@ -32,7 +32,7 @@ CONFIG_PACKAGE_kmod-rtl8821cu=y
 
 CONFIG_PACKAGE_luci=y
 CONFIG_LUCI_LANG_zh-cn=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
+# CONFIG_PACKAGE_luci-theme-bootstrap is not set
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 
