--- a/.config
+++ b/.config
@@ -34,6 +34,7 @@ CONFIG_PACKAGE_luci=y
 CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
+# CONFIG_PACKAGE_luci-theme-bootstrap is not set
 
 # CONFIG_PACKAGE_luci-app-adguardhome is not set
 CONFIG_PACKAGE_luci-app-aria2=y
