--- a/.config
+++ b/.config
@@ -50,7 +50,7 @@ CONFIG_PACKAGE_luci-app-samba=y
 
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc is not set
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_aria2=y
 
